--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -4,9 +4,9 @@
         <div class="player-head"></div>
         <div class="player-role"></div>
         <div class="player-monnaie"></div>
-        <button class="settings-btn icon-settings"></button>
+        <button class="settings-btn icon-settings" id="settings-btn"></button>
         <div class="social">
-            <a href="https://discord.gg/makecraftrp" target="_blank" class="discord-btn">
+            <a href="https://discord.gg/HMEMeeMkr8" target="_blank" class="discord-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-discord" viewBox="0 0 16 16">
                     <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
                 </svg>
@@ -28,16 +28,16 @@
             </a>
         </div>
         <div class="play-element">
-            <button class="play-btn">Jouer</button>
+            <button class="play-btn" id="play-btn"></button>
             <div class="download-content">
-                <div class="text-download">Vérification</div>
+                <div class="text-download" id="text-download"></div>
                 <progress value="0" max="0" class="progress-bar"></progress>
             </div>
         </div>
     </div>
 
     <!-- Bannière pour le message d'alerte -->
-    <div class="advert-banner" style="display:none;"></div>
+    <div class="advert-banner" id="advert-banner" style="display:none;"></div>
 
     <div class="body-home">
         <div class="news-list"></div>
@@ -46,11 +46,11 @@
                 <div class="server">
                     <img class="server-img"/>
                     <div class="server-text">
-                        <div class="name">Hors Ligne</div>
-                        <div class="desc"><span class="red">Fermé</span></div>
+                        <div class="name" id="server-name"></div>
+                        <div class="desc" id="server-desc"></div>
                     </div>
                     <div class="etat-text">
-                        <div class="text">0</div>
+                        <div class="text" id="players-connected"></div>
                         <div class="online off"></div>
                     </div>
                 </div>
@@ -59,16 +59,16 @@
                 <div class="ytb">
                     <div class="ytb-header">
                         <div class="header-text">
-                            <div class="title-change">Vidéo communautaire</div>
+                            <div class="title-change" id="video-title"></div>
                         </div>
                     </div>
                     <div class="video">
                         <div class="youtube-thumbnail">
                             <img class="thumbnail-img" alt="YouTube Thumbnail" />
-                            <button class="ytb-play-btn">&#9658;</button>
+                            <button class="ytb-play-btn" id="play-video-btn"></button>
                         </div>
                         <div class="video-credits"></div>
-                        <div class="icon-ytb ytb-btn"> Voir la vidéo</div>
+                        <div class="icon-ytb ytb-btn" id="view-video-btn"></div>
                     </div>
                 </div>
             </div>
